address comments by @ikhoon